--- a/bic/bic/templates/analyses/clinical_relevance/content.html
+++ b/bic/bic/templates/analyses/clinical_relevance/content.html
@@ -22,7 +22,7 @@
                 <th>Taxonomy level</th>
                 <th>Bacteria</th>
                 <th>Overall survival log rank p value</th>
-                <th>TP vs TN wilcox rank sum test p value</th>
+                <th>Tumor (T) vs Adjacency normal (N) wilcox ranksum p value</th>
                 <th>Stage Krus-Wall p value</th>
                 <th>Race Krus-Wall p value</th>
             </tr>
