--- a/bic/bic/templates/downloads.html
+++ b/bic/bic/templates/downloads.html
@@ -19,7 +19,9 @@
     <br>
     <h4>Metadata</h4>
     <h6><a href="/static/downloads/TCGA_miRNAseq_and_mRNAseq_selected_samples_nonFFPE_Primary_Tumor_and_Solid_Tissue_Normal_v2.txt" download="BIC metadata matrix.txt">Metadata matrix</a></h6>
-
+    <br>
+    <h4>Processed read information</h4>
+    <h6><a href="/static/downloads/processed_reads_info.xlsx" download="BIC processed read info.xlsx">Processed read info</a></h6>
 </div>
 
 {% endblock %}
