--- a/bic/bic/templates/header.html
+++ b/bic/bic/templates/header.html
@@ -38,7 +38,7 @@
                         <a class="dropdown-item" href={{ analyses_bacteria_clinical_relevance_url }}>&nbsp;Clinical relevance</a>
                         <a class="dropdown-item" href={{ analyses_bacteria_coabundance_network_url }}>&nbsp;Bacterial co-abundance network</a>
                         <a class="dropdown-item" href={{ analyses_bacteria_human_rna_network_url }}>&nbsp;Bacteria-human gene network</a>
-                        <a class="dropdown-item" href={{ analyses_bacteria_associated_gene_ontology_url }}>&nbsp;Bacteria-associated gene ontology</a>
+                        <a class="dropdown-item" href={{ analyses_bacteria_associated_gene_ontology_url }}>&nbsp;Bacteria-associated biological function</a>
                     </div>
                 </li>                
                 
