--- a/bic/bic/templates/analyses/coabundance_network/query.html
+++ b/bic/bic/templates/analyses/coabundance_network/query.html
@@ -88,6 +88,24 @@
             </div>
 
 
+            <!-- <div class="form-group row">
+                <label for="select a taxononmy level" class="col-sm-3 control-label">
+                Network displaying option:
+                </label>
+                <div class="col-sm-7">
+                    <select id="network_displaying_option_input" class="form-control">
+                        <option value="all">All</option>
+                        <option value="first_neighbor">First neighbors only</option>
+                    </select> 
+                </div>
+            </div> -->
+
+
+            <div class="checkbox">
+                <label><input id="network_displaying_option_input" type="checkbox" value=""> Display edges between first neighbors of the queried bacteria</label>
+            </div>
+
+
             <div class="col-sm-10 text-right">
                 <button id="analyses_coabundance_network_query" type="submit-button" class="btn btn-primary btn-lg">
                     Query
