--- a/bic/bic/templates/documents.html
+++ b/bic/bic/templates/documents.html
@@ -17,7 +17,7 @@
     <li><a href="#a_documents_analysis_bacterial_clinical_relevance" id="menu_documents_analysis_bacterial_clinical_relevance">&#167; Clinical relevance</li></a>
     <li><a href="#a_documents_analysis_bacterial_coabundance_network" id="menu_documents_analysis_bacterial_coabundance_network">&#167; Bacterial co-abundance network</li></a>
     <li><a href="#a_documents_analysis_bacterial_human_rna_network" id="menu_documents_analysis_bacterial_human_rna_network">&#167; Bacteria-human gene network</li></a>
-    <li><a href="#a_documents_analysis_bacterial_associated_gene_ontology" id="menu_documents_analysis_bacterial_associated_gene_ontology">&#167; Bacteria-associated gene ontology</li></a>
+    <li><a href="#a_documents_analysis_bacterial_associated_gene_ontology" id="menu_documents_analysis_bacterial_associated_gene_ontology">&#167; Bacteria-associated biological function</li></a>
 </div>
 
 
@@ -90,7 +90,7 @@
         <h6 class="documents_analysis_result_part">For the result:</h6>
         <img class="img_documents_analyses_plot" src="{% static 'figures/documents_analyses_bacterial_composition_plot.png' %}" alt="Currently unavailable">
         <p>
-            The stacked barplot shows the bacterial composition of input cancer type, taxonomy, and top N abundant taxa. The “Other” category of the plot is the summation of the remaining taxa. Save the image by clicking the save button or see the expression value of the taxa in the individual sample as the mouse hovers over the stacked barplot. The table shows the relative abundance of input cancer type and taxonomy of the particular sample. Save the table by clicking Copy, Excel, or CSV button.
+            The stacked barplot shows the bacterial composition of input cancer type, taxonomy, and top N abundant taxa. The "Other" category of the plot is the summation of the remaining taxa. Save the image by clicking the save button or see the expression value of the taxa in the individual sample as the mouse hovers over the stacked barplot. The table shows the relative abundance of input cancer type and taxonomy of the particular sample. Save the table by clicking Copy, Excel, or CSV button.
         </p>
         <img class="img_documents_analyses_table" src="{% static 'figures/documents_analyses_bacterial_composition_table.png' %}" alt="Currently unavailable">
         <br>
@@ -114,9 +114,7 @@
         <h6 class="documents_analysis_result_part">For the result:</h6>
         <img class="img_documents_analyses_plot" src="{% static 'figures/documents_analyses_bacterial_clinical_relevance_plot.png' %}" alt="Currently unavailable">
         <p>
-            Figure A shows the Kaplan-Meier plot of the input bacteria, taxonomy, and cancer type. The tumor samples are separated into a high and low group according to the median value of the bacterial abundance. Figure B shows the boxplot of relative abundance tumor and its adjacency tissues. Figure C and D show the boxplot of relative abundance of different group comparisons of the tumor samples, e.g., tumor stages and races. The message, “… has zero expression in all samples of …”, appears if all the expressions of the queried bacteria are all zeros in the search cancer type. Additionally, if there are no normal adjacency samples in the queried cancer type, figure B will show “Not available” only. Slide, zoom in, save or reload the image by clicking the button in the individual plot. The table shows the statistical p-value of the comparing groups. Save the table by clicking Copy, Excel, or CSV button.
-        </p>
-        <img class="img_documents_analyses_table" src="{% static 'figures/documents_analyses_bacterial_clinical_relevance_table.png' %}" alt="Currently unavailable">
+            Figure A shows the Kaplan-Meier plot of the input bacteria, taxonomy, and cancer type. The tumor samples are separated into a high and low group according to the median value of the bacterial abundance. Figure B shows the boxplot of the relative abundance of tumors and their adjacency normal tissues. Figure C and D show the boxplots of relative abundance of different groups in comparisons of the tumor samples, e.g., tumor stages and races. The message, "… has zero expression in all samples of …", appears if all the expressions of the queried bacteria are all zeros in the search cancer type. Additionally, if there are no adjacency normal samples in the queried cancer type, figure B will show "Not available" only. Slide, zoom in, save or reload the image by clicking the button in the individual plot. The table shows the statistical p-value of the comparing groups. Save the table by clicking Copy, Excel, or CSV button.        <img class="img_documents_analyses_table" src="{% static 'figures/documents_analyses_bacterial_clinical_relevance_table.png' %}" alt="Currently unavailable">
         <br>
         <br>
     </div>
@@ -135,7 +133,9 @@
             <br>
             Step 4. Input p-value should be in the range of 0 and 1. If the setting is out of range, the message, "0 ≤ p-value ≤ 1", will show up on 4. If the queried p-value is too low, no result will be returned, and the tip "Too stringent!!!" will appear on 4.
             <br>
-            Step 5. Click "Query" to get the result part.
+            Step 5. Check the box if you want to see the edges between first neighbors of the queried bacteria.
+            <br>
+            Step 6. Click "Query" to get the result part.
          </p>
         <h6 class="documents_analysis_result_part">For the result:</h6>
         <img class="img_documents_analyses_plot" src="{% static 'figures/documents_analyses_bacterial_coabundance_network_plot.png' %}" alt="Currently unavailable">
@@ -158,7 +158,7 @@
             <br>
             Step 2. Select the taxonomy level.
             <br>
-            Step 3. Enter the bacteria name of interest. Autocompleted name list will popup if the bacteria existed in BIC human RNA network. Otherwise, “Not available” will appear on 3 after clicking the query button.
+            Step 3. Enter the bacteria name of interest. Autocompleted name list will popup if the bacteria existed in BIC human RNA network. Otherwise, "Not available" will appear on 3 after clicking the query button.
             <br>
             Step 4. Input z-score should be in the range of 0 and 20. If the setting is out of range, the message, "0 ≤ z-score ≤ 20", will show up on 4. If the queried z-score is too high, no result will be returned, and the tip "Too stringent!!!" will appear on 4.
             <br>
@@ -180,7 +180,7 @@
 
 
 
-    <a id="a_documents_analysis_bacterial_associated_gene_ontology"><h5>&#167; Bacteria-associated gene ontology</h5></a>
+    <a id="a_documents_analysis_bacterial_associated_gene_ontology"><h5>&#167; Bacteria-associated biological function</h5></a>
         <div id="div_documents_analysis_bacterial_associated_gene_ontology"> 
         <h6 class="documents_analysis_query_part">For the query:</h6>
         <img class="img_documents_analyses_query" src="{% static 'figures/documents_analyses_bacterial_associated_gene_ontology_query.png' %}" alt="Currently unavailable">
@@ -189,18 +189,20 @@
             <br>
             Step 2. Select the taxonomy level.
             <br>
-            Step 3. Enter the bacteria name of interest. Autocompleted name list will popup if the bacteria existed in BIC human RNA network. Otherwise, “Not available” will appear on 3 after clicking the query button.
+            Step 3. Enter the bacteria name of interest. Autocompleted name list will popup if the bacteria existed in BIC human RNA network. Otherwise, "Not available" will appear on 3 after clicking the query button.
             <br>
-            Step 4. Input adjusted p-value should be in the range of 0 and 1. If the setting is out of range, the message, “0 ≤ Adj p-value ≤ 1”, will show up on 4. If the queried adjusted p-value is too low, no result will be returned, and the tip “Too stringent!!!” will appear on 4.
+            Step 4. Select a gene set.
             <br>
-            Step 5. Input number of terms should be between 1 and 500. If the setting is out of range, the message “1 ≤ N ≤ 500” will appear on 5.
+            Step 5. Input adjusted p-value should be in the range of 0 and 1. If the setting is out of range, the message, "0 ≤ Adj p-value ≤ 1", will show up on 4. If the queried adjusted p-value is too low, no result will be returned, and the tip "Too stringent!!!" will appear on 4.
             <br>
-            Step 6. Click "Query" to get the result part.
+            Step 6. Input number of terms should be between 1 and 500. If the setting is out of range, the message "1 ≤ N ≤ 500" will appear on 5.
+            <br>
+            Step 7. Click "Query" to get the result part.
          </p>
         <h6 class="documents_analysis_result_part">For the result:</h6>
         <img class="img_documents_analyses_plot" src="{% static 'figures/documents_analyses_bacterial_associated_gene_ontology_plot.png' %}" alt="Currently unavailable">
         <p>
-            The bar chart shows the queried number (N) of gene ontology (GO) terms, sorted by descending order of NES, of the input bacteria, taxonomy, cancer type, and adjusted p-value cut-off. To reduce plot complication, the maximal number of N is 500. The table shows all the GO terms rather than the limited number. Save the table by clicking Copy, Excel, or CSV button.
+            The bar chart shows the queried number (N) of biological function (Gene ontology BP/ KEGG pathway/ Reactome pathway) terms, sorted by descending order of NES, of the input bacteria, taxonomy, cancer type, and adjusted p-value cut-off. To reduce plot complication, the maximal number of N is 500. The table shows all the terms rather than the limited number. Save the table by clicking Copy, Excel, or CSV button.
         </p>
         <img class="img_documents_analyses_table" src="{% static 'figures/documents_analyses_bacterial_associated_gene_ontology_table.png' %}" alt="Currently unavailable">
         <br>
