--- a/bic/bic/templates/index.html
+++ b/bic/bic/templates/index.html
@@ -202,7 +202,7 @@
             <br>
             <div class="div_index_figures_message">
                 <div class="div_message_title">
-                    Bacteria-associated gene ontology
+                    Bacteria-associated biological function
                 </div>
                 <div class="div_message_keyword">
                     <br>
@@ -210,7 +210,7 @@
                     <ul class="message_keyword">
                         <li class="message_keyword_text">Individual cancer</li>
                         <li class="message_keyword_delimiter">|</li>
-                        <li class="message_keyword_text">Gene ontology</li>
+                        <li class="message_keyword_text">Biological function</li>
                     </ul>
                 </div>
                 <div class="message_description">
