--- a/bic/bic/templates/index.html
+++ b/bic/bic/templates/index.html
@@ -227,4 +227,13 @@
     </div>
 </div>
 
+
+
+<div class="callout callout-light">
+    <b>Citation: </b>
+    <a href="https://academic.oup.com/nar/advance-article/doi/10.1093/nar/gkac891/6764420" target="_blank">BIC: a database for the transcriptional landscape of bacteria in cancer</a>
+    <I>Nucleic Acids Research</I>, 2023.
+</div>
+
+
 {% endblock %}
